K8s_demos/intgress demo/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-app-ingress
  namespace: my-app-namespace
  annotations:
    kubernetes.io/ingress.class: 
      nginx  # Replace with your ingress controller
spec:
  rules:
  - host: your-domain.com  # Replace with your domain
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: 
               my-app-service
            port:
              number: 3000
